--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/Users/harvest/.local/share/virtualenvs/flask-video-stream-IHsRVYb8/bin/python"
+  "python.pythonPath": "C:\\Users\\tucke\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
