--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "C:\\Users\\tucke\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+  "python.pythonPath": "C:\\Users\\Jarvis\\AppData\\Local\\Programs\\Python\\Python35\\python.exe",
+  "liveServer.settings.port": 5501
 }
